@@ -9,7 +9,6 @@ import static com.dpw.runner.shipment.services.commons.constants.Constants.CONSI
 import static com.dpw.runner.shipment.services.commons.constants.Constants.CONSIGNOR_PARTY;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.CONSOLIDATION_ID;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.DIRECTION_EXP;
-import static com.dpw.runner.shipment.services.commons.constants.Constants.MASS;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.NETWORK_TRANSFER;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.ORDERS_COUNT;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.SHIPMENT;
@@ -19,9 +18,6 @@ import static com.dpw.runner.shipment.services.commons.constants.Constants.SHIPM
 import static com.dpw.runner.shipment.services.commons.constants.Constants.SHIPPER_REFERENCE;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.TRANSPORT_MODE_AIR;
 import static com.dpw.runner.shipment.services.commons.constants.Constants.TRANSPORT_MODE_SEA;
-import static com.dpw.runner.shipment.services.commons.constants.Constants.VOLUME;
-import static com.dpw.runner.shipment.services.commons.constants.Constants.VOLUME_UNIT_M3;
-import static com.dpw.runner.shipment.services.commons.constants.Constants.WEIGHT_UNIT_KG;
 import static com.dpw.runner.shipment.services.helpers.DbAccessHelper.fetchData;
 import static com.dpw.runner.shipment.services.utils.CommonUtils.andCriteria;
 import static com.dpw.runner.shipment.services.utils.CommonUtils.constructListCommonRequest;
@@ -49,7 +45,6 @@ import com.dpw.runner.shipment.services.document.response.DocumentManagerRespons
 import com.dpw.runner.shipment.services.document.service.IDocumentManagerService;
 import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.AutoUpdateWtVolRequest;
 import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.AutoUpdateWtVolResponse;
-import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ShipmentMeasurementDetailsDto;
 import com.dpw.runner.shipment.services.dto.GeneralAPIRequests.VolumeWeightChargeable;
 import com.dpw.runner.shipment.services.dto.mapper.AttachListShipmentMapper;
 import com.dpw.runner.shipment.services.dto.request.*;
@@ -69,8 +64,6 @@ import com.dpw.runner.shipment.services.dto.request.ContainerV3Request;
 import com.dpw.runner.shipment.services.dto.request.CustomerBookingV3Request;
 import com.dpw.runner.shipment.services.dto.request.ListContractRequest;
 import com.dpw.runner.shipment.services.dto.request.LogHistoryRequest;
-import com.dpw.runner.shipment.services.dto.request.NotesRequest;
-import com.dpw.runner.shipment.services.dto.request.PackingRequest;
 import com.dpw.runner.shipment.services.dto.request.PartiesRequest;
 import com.dpw.runner.shipment.services.dto.request.ReferenceNumbersRequest;
 import com.dpw.runner.shipment.services.dto.request.RoutingsRequest;
@@ -126,8 +119,6 @@ import com.dpw.runner.shipment.services.projection.ShipmentDetailsProjection;
 import com.dpw.runner.shipment.services.repository.interfaces.IShipmentRepository;
 import com.dpw.runner.shipment.services.service.interfaces.*;
 import com.dpw.runner.shipment.services.service.v1.util.V1ServiceUtil;
-import com.dpw.runner.shipment.services.syncing.interfaces.IConsolidationSync;
-import com.dpw.runner.shipment.services.syncing.interfaces.IShipmentSync;
 import com.dpw.runner.shipment.services.utils.*;
 import com.dpw.runner.shipment.services.utils.v3.EventsV3Util;
 import com.dpw.runner.shipment.services.utils.v3.NpmContractV3Util;
@@ -241,19 +232,15 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
     private IRoutingsDao routingsV3Dao;
     private IPackingDao packingDao;
     private IContainerDao containerDao;
-    private INotesDao notesDao;
     private DependentServiceHelper dependentServiceHelper;
     private IEventDao eventDao;
     private IEventsV3Service eventsV3Service;
-    private IPackingService packingService;
     private IOrderManagementAdapter orderManagementAdapter;
     private V1ServiceUtil v1ServiceUtil;
     private IAwbDao awbDao;
     private IDocumentManagerService documentManagerService;
     private IHblService hblService;
     private IPackingV3Service packingV3Service;
-    private IShipmentSync shipmentSync;
-    private IConsolidationSync consolidationSync;
     private NetworkTransferV3Util networkTransferV3Util;
     private ITruckDriverDetailsDao truckDriverDetailsDao;
     private IReferenceNumbersDao referenceNumbersDao;
@@ -297,7 +284,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
             IConsolidationDetailsDao consolidationDetailsDao,
             IPartiesDao partiesDao,
             IRoutingsDao routingsDao,
-            INotesDao notesDao,
             IContainerDao containerDao,
             IOrderManagementAdapter orderManagementAdapter,
             V1ServiceUtil v1ServiceUtil,
@@ -307,8 +293,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
             IAwbDao awbDao,
             IDocumentManagerService documentManagerService,
             IHblService hblService,
-            IShipmentSync shipmentSync,
-            IConsolidationSync consolidationSync,
             NetworkTransferV3Util networkTransferV3Util,
             ITruckDriverDetailsDao truckDriverDetailsDao,
             IReferenceNumbersDao referenceNumbersDao,
@@ -318,7 +302,7 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
             IShipmentsContainersMappingDao shipmentsContainersMappingDao,
             IDpsEventService dpsEventService, ModelMapper modelMapper,
             @Lazy ConsolidationV3Service consolidationV3Service,
-            MasterDataHelper masterDataHelper, @Lazy IRoutingsV3Service routingsV3Service, IPackingService packingService,
+            MasterDataHelper masterDataHelper, @Lazy IRoutingsV3Service routingsV3Service,
             IPackingV3Service packingV3Service, INPMServiceAdapter npmServiceAdapater,
             INetworkTransferDao networkTransferDao,
             INotificationService notificationService, IMDMServiceAdapter mdmServiceAdapter) {
@@ -339,7 +323,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
         this.consolidationDetailsDao = consolidationDetailsDao;
         this.partiesDao = partiesDao;
         this.routingsV3Dao = routingsDao;
-        this.notesDao = notesDao;
         this.orderManagementAdapter = orderManagementAdapter;
         this.v1ServiceUtil = v1ServiceUtil;
         this.dependentServiceHelper = dependentServiceHelper;
@@ -349,9 +332,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
         this.documentManagerService = documentManagerService;
         this.hblService = hblService;
         this.routingsV3Service = routingsV3Service;
-        this.packingService = packingService;
-        this.shipmentSync = shipmentSync;
-        this.consolidationSync = consolidationSync;
         this.networkTransferV3Util = networkTransferV3Util;
         this.truckDriverDetailsDao = truckDriverDetailsDao;
         this.referenceNumbersDao = referenceNumbersDao;
@@ -734,7 +714,7 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
             // Trigger Kafka event for PushToDownStreamServices
             this.triggerPushToDownStream(shipmentDetails, null, true);
         } catch (Exception e) {
-            log.error("Error occurred due to: " + e.getStackTrace());
+            log.error(Constants.ERROR_MESSAGE + e.getStackTrace());
             log.error(e.getMessage());
             throw new ValidationException(e.getMessage());
         }
@@ -823,7 +803,7 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
         } catch (Exception e) {
             String responseMsg = e.getMessage() != null ? e.getMessage()
                     : DaoConstants.DAO_GENERIC_UPDATE_EXCEPTION_MSG;
-            log.error("Error occurred due to: " + e.getStackTrace());
+            log.error(ERROR_MESSAGE + e.getStackTrace());
             log.error(responseMsg, e);
             throw new ValidationException(e.getMessage());
         }
@@ -1003,7 +983,7 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
         BulkPackingResponse bulkPackingResponse;
         List<PackingV3Request> quotePackingRequests = contractUsages.stream()
                 .map(usage -> getPackingRequest(usage, shipmentDetails))
-                .collect(Collectors.toList());
+                .toList();
         if (shipmentDetails.getPackingList() != null && !shipmentDetails.getPackingList().isEmpty() && !quotePackingRequests.isEmpty()) {
             List<PackingV3Request> existingRequests = jsonHelper.convertValueToList(shipmentDetails.getPackingList(), PackingV3Request.class);
             packingV3Service.deleteBulk(existingRequests, SHIPMENT);
@@ -1019,7 +999,7 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
         BulkContainerResponse bulkContainerResponse;
         List<ContainerV3Request> quoteContainerRequests = contractUsages.stream()
                 .map(usage -> getContainerRequest(usage, shipmentDetails))
-                .collect(Collectors.toList());
+                .toList();
         if (shipmentDetails.getContainersList() != null && !shipmentDetails.getContainersList().isEmpty() && !quoteContainerRequests.isEmpty()) {
             List<ContainerV3Request> existingContainerRequests = jsonHelper.convertValueToList(shipmentDetails.getContainersList(), ContainerV3Request.class);
             containerV3Service.deleteBulk(existingContainerRequests, SHIPMENT);
@@ -1054,7 +1034,7 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
                 .stream()
                 .map(Packing::getPacksType)
                 .filter(type -> type != null && !contractCargoTypes.contains(type.trim()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!missingContainerCodes.isEmpty() || !missingPackTypes.isEmpty()) {
             throw new RunnerException("The quote selected doesn’t have the same package/container information");
@@ -1273,7 +1253,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
     public void afterSave(ShipmentDetails shipmentDetails, ShipmentDetails oldEntity, ShipmentV3Request shipmentRequest, ShipmentSettingsDetails shipmentSettingsDetails, ConsoleShipmentData consoleShipmentData) throws RunnerException {
         boolean isCreate = consoleShipmentData.isCreate();
         boolean syncConsole = consoleShipmentData.isSyncConsole();
-        boolean isFromET = consoleShipmentData.isFromET();
         log.info("shipment afterSave start.... ");
         List<Events> eventsList = oldEntity != null ? oldEntity.getEventsList() : new ArrayList<>();
         List<PartiesRequest> shipmentAddressList = shipmentRequest.getShipmentAddresses();
@@ -2355,33 +2334,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
         return this.createFromBooking(CommonRequestModel.buildRequest(shipmentRequest), customerBookingRequest, containerList, consolidationId);
     }
 
-    private AutoUpdateWtVolRequest getAutoUpdateWtVolRequest(CustomerBookingV3Request customerBookingV3Request) {
-        AutoUpdateWtVolRequest autoUpdateWtVolRequest = new AutoUpdateWtVolRequest();
-        autoUpdateWtVolRequest.setShipmentType(customerBookingV3Request.getCargoType());
-        autoUpdateWtVolRequest.setTransportMode(customerBookingV3Request.getTransportType());
-        autoUpdateWtVolRequest.setVolume(customerBookingV3Request.getVolume());
-        autoUpdateWtVolRequest.setVolumeUnit(customerBookingV3Request.getVolumeUnit());
-        autoUpdateWtVolRequest.setChargable(customerBookingV3Request.getChargeable());
-        autoUpdateWtVolRequest.setChargeableUnit(customerBookingV3Request.getChargeableUnit());
-        autoUpdateWtVolRequest.setWeight(customerBookingV3Request.getGrossWeight());
-        autoUpdateWtVolRequest.setWeightUnit(customerBookingV3Request.getGrossWeightUnit());
-        autoUpdateWtVolRequest.setVolumetricWeight(customerBookingV3Request.getWeightVolume());
-        autoUpdateWtVolRequest.setVolumetricWeightUnit(customerBookingV3Request.getWeightVolumeUnit());
-        List<ContainerRequest> containerRequests = new ArrayList<>();
-        List<PackingRequest> packingRequests = new ArrayList<>();
-        if(customerBookingV3Request.getContainersList() != null) {
-            containerRequests = jsonHelper.convertValueToList(customerBookingV3Request.getContainersList(), ContainerRequest.class);
-        }
-        if(customerBookingV3Request.getPackingList() != null) {
-            packingRequests = jsonHelper.convertValueToList(customerBookingV3Request.getPackingList(), PackingRequest.class);
-        }
-        autoUpdateWtVolRequest.setContainersList(containerRequests);
-        autoUpdateWtVolRequest.setPackingList(packingRequests);
-        autoUpdateWtVolRequest.setNoOfPacks(String.valueOf(customerBookingV3Request.getPackages()));
-        autoUpdateWtVolRequest.setPacksUnit(customerBookingV3Request.getPackageType());
-        return autoUpdateWtVolRequest;
-    }
-
     public ShipmentDetailsV3Response createFromBooking(CommonRequestModel commonRequestModel, CustomerBookingV3Request customerBookingV3Request, Set<ContainerRequest> containerList, Long consolidationId) {
         ShipmentV3Request request = (ShipmentV3Request) commonRequestModel.getData();
         if (request == null) {
@@ -2430,8 +2382,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
                 shipmentDetails.setShipmentAddresses(updatedParties);
             }
             checkContainerAssignedForHbl(shipmentDetails, updatedPackings);
-
-            List<NotesRequest> notesRequest = getNotesRequests(request, shipmentId);
             dependentServiceHelper.pushShipmentDataToDependentService(shipmentDetails, true, false, null);
 
             auditLogService.addAuditLog(
@@ -2464,57 +2414,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
             List<Events> updatedEvents = eventDao.updateEntityFromOtherEntity(eventsList, shipmentDetails.getId(), Constants.SHIPMENT);
             shipmentDetails.setEventsList(updatedEvents);
             eventsV3Service.updateAtaAtdInShipment(updatedEvents, shipmentDetails, shipmentSettingsDetails);
-        }
-    }
-
-    private List<PackingV3Request> getPackingListRequest(CustomerBookingV3Request customerBookingRequest) {
-        return customerBookingRequest.getPackingList() != null ? customerBookingRequest.getPackingList().stream().map(obj -> {
-            setHeightWidthUnit(obj);
-            if (obj.getWeight() != null)
-                obj.setWeight(obj.getWeight().multiply(new BigDecimal(obj.getPacks())));
-            if (obj.getVolume() != null)
-                obj.setVolume(obj.getVolume().multiply(new BigDecimal(obj.getPacks())));
-            if (TRANSPORT_MODE_AIR.equalsIgnoreCase(customerBookingRequest.getTransportType())) {
-                calculateWeightVolumeForPacks(obj);
-            }
-
-            return obj;
-        }).collect(Collectors.toList()) : null;
-    }
-
-    private void setHeightWidthUnit(PackingV3Request obj) {
-        if (!StringUtility.isEmpty(obj.getLengthUnit())) {
-            obj.setWidthUnit(obj.getLengthUnit());
-            obj.setHeightUnit(obj.getLengthUnit());
-        }
-    }
-
-    private void calculateWeightVolumeForPacks(PackingV3Request obj) {
-        try {
-            // Convert Weight to KGs
-            if (Objects.nonNull(obj.getWeight())) {
-                obj.setWeight(new BigDecimal(convertUnit(MASS, obj.getWeight(), obj.getWeightUnit(), WEIGHT_UNIT_KG).toString()));
-                obj.setWeightUnit(Constants.WEIGHT_UNIT_KG);
-            }
-
-            // Convert Volume to M3
-            if (Objects.nonNull(obj.getVolume())) {
-                obj.setVolume(new BigDecimal(convertUnit(VOLUME, obj.getVolume(), obj.getVolumeUnit(), VOLUME_UNIT_M3).toString()));
-                obj.setVolumeUnit(Constants.VOLUME_UNIT_M3);
-
-                double factor = Constants.AIR_FACTOR_FOR_VOL_WT;
-                BigDecimal wvInKG = obj.getVolume().multiply(BigDecimal.valueOf(factor));
-                obj.setVolumeWeight(wvInKG);
-                obj.setVolumeWeightUnit(Constants.WEIGHT_UNIT_KG);
-            }
-
-            // Calculate chargeable
-            if (Objects.nonNull(obj.getWeight()) && Objects.nonNull(obj.getVolumeWeight())) {
-                obj.setChargeable(obj.getVolumeWeight().max(obj.getWeight()));
-                obj.setChargeableUnit(WEIGHT_UNIT_KG);
-            }
-        } catch (Exception e) {
-            log.error("Error while unit conversion for AIR transport mode in shipment packs from booking", e);
         }
     }
 
@@ -2609,15 +2508,8 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
                 salesBranch(customerBookingRequest.getSalesBranch()).
                 primarySalesAgentEmail(customerBookingRequest.getPrimarySalesAgentEmail()).
                 secondarySalesAgentEmail(customerBookingRequest.getSecondarySalesAgentEmail()).
-                //TODO: check with shipment team
-//                containersList(consolidationDetails != null && !consolidationDetails.isEmpty() ? containerList : null).
-//                packingList(getPackingListRequestV3(customerBookingRequest)).
-                //fileRepoList(customerBookingRequest.getFileRepoList()).
-                //routingsList(Boolean.TRUE.equals(commonUtils.getShipmentSettingFromContext().getIsRunnerV3Enabled()) && Boolean.TRUE.equals(isRouteMasterEnabled) ? null : customerBookingRequestRoutingList).
-                //consolidationList(isConsoleCreationNeededV3(customerBookingRequest) ? consolidationDetails : null).
-                        referenceNumbersList(createReferenceNumbersList(customerBookingRequest.getReferenceNumbersList())).
-                //notesList(createNotes(notes)).
-                        sourceTenantId(Long.valueOf(UserContext.getUser().TenantId)).
+                referenceNumbersList(createReferenceNumbersList(customerBookingRequest.getReferenceNumbersList())).
+                sourceTenantId(Long.valueOf(UserContext.getUser().TenantId)).
                 source("API").
                 bookingType("ONLINE").
                 consolRef(consolidationDetails != null && !consolidationDetails.isEmpty() ? consolidationDetails.iterator().next().getConsolidationNumber() : "").
@@ -2655,34 +2547,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
                 earliestDropOffFullEquipmentToCarrier(customerBookingRequest.getEarliestDropOffFullEquipmentToCarrier()).
                 latestArrivalTime(customerBookingRequest.getLatestArrivalTime()).
                 build();
-    }
-
-    private AutoUpdateWtVolResponse calculateShipmentWV(AutoUpdateWtVolRequest request) throws RunnerException {
-        AutoUpdateWtVolResponse response = jsonHelper.convertValue(request, AutoUpdateWtVolResponse.class);
-        List<Packing> packingList = new ArrayList<>();
-        if (request.getPackingList() != null)
-            packingList = jsonHelper.convertValueToList(request.getPackingList(), Packing.class);
-        List<Containers> containersList = new ArrayList<>();
-        if (request.getContainersList() != null)
-            containersList = jsonHelper.convertValueToList(request.getContainersList(), Containers.class);
-        calculatePacksAndPacksUnit(packingList, response);
-        response = calculateWeightAndVolumeUnit(request, packingList, response);
-        ShipmentSettingsDetails shipmentSettingsDetails = commonUtils.getShipmentSettingFromContext();
-        boolean isPacksPresent = packingList != null && !packingList.isEmpty();
-        if (!isPacksPresent)
-            response = updateShipmentDetails(response, containersList);
-        calculateVW(request, response, true);
-        if (shipmentSettingsDetails.getIsShipmentLevelContainer() == null || !shipmentSettingsDetails.getIsShipmentLevelContainer().booleanValue()
-                || Objects.equals(request.getTransportMode(), Constants.TRANSPORT_MODE_AIR) || isPacksPresent) {
-            ShipmentMeasurementDetailsDto dto = new ShipmentMeasurementDetailsDto();
-            response.setPackSummary(packingService.calculatePackSummary(packingList, request.getTransportMode(), request.getShipmentType(), dto));
-            updateResponseFromDto(request, response, dto, shipmentSettingsDetails);
-        }
-        V1TenantSettingsResponse v1TenantSettingsResponse = commonUtils.getCurrentTenantSettings();
-        if (Boolean.TRUE.equals(v1TenantSettingsResponse.getP100Branch()) && Objects.equals(request.getTransportMode(), Constants.TRANSPORT_MODE_SEA)) {
-            calculatePacksAndPacksUnitFromContainer(response, containersList);
-        }
-        return response;
     }
 
     private PartiesRequest createPartiesRequest(PartiesRequest party, String countryCode) {
@@ -2843,7 +2707,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
 
     private List<Packing> getAndSetPackings(CustomerBookingV3Request request, Long shipmentId, ShipmentDetails shipmentDetails) {
         List<Packing> updatedPackings = new ArrayList<>();
-        //TODO: check with shipment team
         if (request.getPackingList() != null) {
             updatedPackings = packingDao.saveEntityFromShipment(jsonHelper.convertValueToList(request.getPackingList(), Packing.class), shipmentId);
             shipmentDetails.setPackingList(updatedPackings);
@@ -2855,22 +2718,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
         if (shipmentDetails.getContainersList() != null && !shipmentDetails.getContainersList().isEmpty()) {
             hblService.checkAllContainerAssigned(shipmentDetails, shipmentDetails.getContainersList(), updatedPackings);
         }
-    }
-
-    private List<NotesRequest> getNotesRequests(ShipmentV3Request request, Long shipmentId) {
-        List<NotesRequest> notesRequest = null;
-        //request.getNotesList();
-        if (notesRequest != null) {
-            for (NotesRequest req : notesRequest) {
-                req.setEntityId(shipmentId);
-            }
-        }
-        if (notesRequest != null) {
-            for (NotesRequest req : notesRequest) {
-                notesDao.save(jsonHelper.convertValue(req, Notes.class));
-            }
-        }
-        return notesRequest;
     }
 
     public DocumentManagerResponse<T> addFilesFromBookingToShipment(String shipmentGuid, String bookingGuid) {
@@ -2898,7 +2745,7 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
     }
 
     private List<ReferenceNumbersRequest> createReferenceNumbersList(List<ReferenceNumbersRequest> referenceNumbers) {
-        if (referenceNumbers == null) return null;
+        if (referenceNumbers == null) return Collections.emptyList();
         return referenceNumbers.stream().filter(Objects::nonNull).map(refNumber ->
                 ReferenceNumbersRequest.builder()
                         .consolidationId(refNumber.getConsolidationId())
@@ -2909,43 +2756,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
                         .isPortalEnable(refNumber.getIsPortalEnable())
                         .build()).toList();
     }
-
-    private List<NotesRequest> createNotes(List<Notes> notes) {
-        if (notes == null) return null;
-        return notes.stream().filter(Objects::nonNull).map(note ->
-                NotesRequest.builder()
-                        .assignedTo(note.getAssignedTo())
-                        .label(note.getLabel())
-                        .text(note.getText())
-                        .insertUserDisplayName(note.getCreatedBy())
-                        .isPublic(note.getIsPublic())
-                        .insertDate(note.getCreatedAt())
-                        .entityType(Constants.CUSTOMER_BOOKING)
-                        .build()).toList();
-    }
-
-    private <T> T calculatePacksAndPacksUnit(List<Packing> packings, T response) {
-        Integer totalPacks = 0;
-        String tempPackingUnit = null;
-        String packingUnit = null;
-        if (packings != null && !packings.isEmpty()) {
-            for (Packing packing : packings) {
-                if (!isStringNullOrEmpty(packing.getPacks()))
-                    totalPacks = totalPacks + Integer.parseInt(packing.getPacks());
-                if (tempPackingUnit == null) {
-                    tempPackingUnit = packing.getPacksType();
-                    packingUnit = packing.getPacksType();
-                } else {
-                    if (isMPKUnitCase(packing, tempPackingUnit)) {
-                        packingUnit = Constants.MPK;
-                    }
-                }
-            }
-        }
-        getResponseForPacks(response, totalPacks, packingUnit);
-        return response;
-    }
-
     private boolean isMPKUnitCase(Packing packing, String tempPackingUnit) {
         return !isStringNullOrEmpty(packing.getPacksType()) && tempPackingUnit.equals(packing.getPacksType());
     }
@@ -3086,52 +2896,6 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
             return Constants.MPK;
         }
     }
-
-    private void updateResponseFromDto(AutoUpdateWtVolRequest request, AutoUpdateWtVolResponse response, ShipmentMeasurementDetailsDto dto, ShipmentSettingsDetails shipmentSettingsDetails) {
-        String transportMode = request.getTransportMode();
-        String cargoType = request.getShipmentType();
-
-        boolean isSeaLCL = commonUtils.isSeaLCL(transportMode, cargoType);
-        boolean isAir = TRANSPORT_MODE_AIR.equals(transportMode);
-        boolean isRoadLCLorLTL = commonUtils.isRoadLCLorLTL(transportMode, cargoType);
-
-        if (isSeaLCL || isAir || isRoadLCLorLTL) {
-            response.setInnerPacks(dto.getInnerPacks());
-            response.setInnerPackUnit(dto.getInnerPackUnit());
-        }
-        if (shipmentSettingsDetails.getIsShipmentLevelContainer() != null && shipmentSettingsDetails.getIsShipmentLevelContainer()
-                && request.getPackingList() != null && !request.getPackingList().isEmpty()) {
-            response.setWeight(dto.getWeight());
-            response.setWeightUnit(dto.getWeightUnit());
-            response.setVolume(dto.getVolume());
-            response.setVolumeUnit(dto.getVolumeUnit());
-            response.setNetWeight(dto.getNetWeight());
-            response.setNetWeightUnit(dto.getNetWeightUnit());
-            response.setNoOfPacks(dto.getNoOfPacks());
-            response.setPacksUnit(dto.getPacksUnit());
-        } else if (shipmentSettingsDetails.getIsShipmentLevelContainer() == null || !shipmentSettingsDetails.getIsShipmentLevelContainer()) {
-            response.setNoOfPacks(dto.getNoOfPacks());
-            response.setPacksUnit(dto.getPacksUnit());
-        }
-    }
-
-    private void calculatePacksAndPacksUnitFromContainer(AutoUpdateWtVolResponse response, List<Containers> containersList) {
-        if (containersList != null && !containersList.isEmpty()) {
-            String packsUnit = "";
-            long packageCount = 0;
-            long totalPacks = 0;
-            for (Containers container : containersList) {
-                if (!isStringNullOrEmpty(container.getPacks())) {
-                    packageCount = packageCount + Integer.parseInt(container.getPacks());
-                    totalPacks = totalPacks + Integer.parseInt(container.getPacks());
-                }
-            }
-            packsUnit = setPacksUnit(containersList);
-            response.setNoOfPacks(totalPacks == 0 ? null : String.valueOf(totalPacks));
-            response.setPacksUnit(packsUnit);
-        }
-    }
-
     public void updateContainerFromCargo(ShipmentDetails shipmentDetails, ShipmentDetails oldShipment) throws RunnerException {
         if (!TRANSPORT_MODE_SEA.equals(shipmentDetails.getTransportMode()) ||
                 Objects.isNull(shipmentDetails.getContainerAssignedToShipmentCargo()) ||
@@ -4462,8 +4226,8 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
             Pair<Specification<ConsolidationDetails>, Pageable> pair = fetchData(listRequest, ConsolidationDetails.class, ConsolidationService.tableNames);
             Page<ConsolidationDetails> consolPage = consolidationDetailsDao.findAll(pair.getLeft(), pair.getRight());
 
-            Set tenantIds = new HashSet<String>();
-            Set locations =  new HashSet<String>();
+            Set<String> tenantIds = new HashSet<>();
+            Set<String> locations =  new HashSet<>();
             final CarrierDetails nullCarrierDetails = new CarrierDetails();
             consolPage.getContent().stream().forEach(i -> {
                 tenantIds.add(StringUtility.convertToString(i.getTenantId()));
@@ -4599,7 +4363,7 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
         } catch (Exception e) {
             String responseMsg = e.getMessage() != null ? e.getMessage()
                     : DaoConstants.DAO_GENERIC_UPDATE_EXCEPTION_MSG;
-            log.error("Error occurred due to: " + e.getStackTrace());
+            log.error(ERROR_MESSAGE + e.getStackTrace());
             log.error(responseMsg, e);
             throw new ValidationException(e.getMessage());
         }
@@ -4636,7 +4400,7 @@ public class ShipmentServiceImplV3 implements IShipmentServiceV3 {
             String entityPayload = jsonHelper.convertToJson(finalShipmentDetails1);
             CompletableFuture.runAsync(masterDataUtils.withMdc(() -> this.createLogHistoryForShipment(entityPayload, finalShipmentDetails1.getId(), finalShipmentDetails1.getGuid())), executorService);
         } catch (Exception e) {
-            log.error("Error occurred due to: " + e.getStackTrace());
+            log.error(ERROR_MESSAGE + e.getStackTrace());
             log.error(e.getMessage());
             throw new ValidationException(e.getMessage());
         }
